# touza

./: .gitignore  AUTHORS  ChangeLog  INSTALL-sub.org  Makedep.inc  Makefile.am  Makefile.in  NEWS  NOTICE  README  README-touza.org  aclocal.m4  aminclude_static.am  atpackage.m4  autogen.sh  autorevision.cache  autorevision.h  bootstrap  configure  configure.ac  makeshift.in  mt_local.m4  touza.F90  touza.h  touza.pc.in  touza_config.h  touza_config.h.in
ami/: Makedep.inc  Makefile.am  Makefile.in  README-ami.org  ami.F90  ami_legacy.F90  ami_miroc.F90  ami_nio.F90  ami_std.F90  ami_table.F90  ami_utils.F90  ami_xform.F90  mt_local.m4  touza_ami.h
cal/: .gitignore  Makedep.inc  Makefile.am  Makefile.in  README-cal.org  atpackage.m4  calendar.F90  calendar_coco.F90  calendar_core.F90  calendar_ils.F90  calendar_matsiro.F90  calendar_miroc.F90  calendar_primitive.F90  mt_local.m4  test_calendar.F90  touza_cal.h  wtc.sh.in
debian/: README.Debian  changelog  control  copyright  libtouza-dev.docs  libtouza-dev.install  libtouza0.docs  libtouza0.symbols  rules  touza-bin.docs
debian/source/: local-options
emu/: Makedep.inc  Makefile.am  Makefile.in  README-emu.org  demo_stp.sh.in  emu.F90  emu_msg.F90  emu_rpx.F90  emu_ugg.F90  emu_usi.F90  gen_agmp.sh  gen_ggf.sh  geodesic.max  intersects_agmp.max  mt_local.m4  touza_emu.h  wrap-ugg.sh.in
emu/agmp/: agmp-c10.F90  agmp-c11.F90  agmp-c12.F90  agmp-c2.F90  agmp-c3.F90  agmp-c4.F90  agmp-c5.F90  agmp-c6.F90  agmp-c7.F90  agmp-c8.F90  agmp-c9.F90  agmp-d10.F90  agmp-d3.F90  agmp-d4.F90  agmp-d5.F90  agmp-d6.F90  agmp-d7.F90  agmp-d8.F90  agmp-d9.F90  agmp-e1.F90  agmp-e2.F90  agmp-e3.F90  agmp-e4.F90  agmp-e5.F90  agmp-e6.F90
emu/ggf/: coeffs_i1-o5.F90  coeffs_i1-o6.F90  coeffs_i1-o7.F90  coeffs_i1-o8.F90  coeffs_i1-o9.F90  coeffs_i1p-o5.F90  coeffs_i1p-o6.F90  coeffs_i1p-o7.F90  coeffs_i1p-o8.F90  coeffs_i1p-o9.F90  coeffs_i2-o5.F90  coeffs_i2-o7.F90  coeffs_i2a-o5.F90  coeffs_i2a-o6.F90  coeffs_i2a-o7.F90  coeffs_i2a-o8.F90  coeffs_i2a-o9.F90  coeffs_i2b-o5.F90  coeffs_i2b-o6.F90  coeffs_i2b-o7.F90  coeffs_i2b-o8.F90  coeffs_i2b-o9.F90  coeffs_i3-o5.F90  coeffs_i3-o6.F90  coeffs_i3-o7.F90  coeffs_i3-o8.F90  coeffs_i3-o9.F90  coeffs_i4a-o5.F90  coeffs_i4a-o6.F90  coeffs_i4a-o7.F90  coeffs_i4a-o8.F90  coeffs_i4a-o9.F90  coeffs_i4b-o5.F90  coeffs_i4b-o6.F90  coeffs_i4b-o7.F90  coeffs_i4b-o8.F90  coeffs_i4b-o9.F90
jmz/: Makefile.am  Makefile.in  README-jmz.org  aclocal.m4  chak.F90  chak_decl.F90  chak_file.F90  chak_lib.F90  chak_opr.F90  chak_reg.F90  configure  configure.ac  convoy.F90  convoy_ps2g.F90  convoy_psprop.F90  convoy_r2g.F90  convoy_util.F90  demo-chak.sh.in  demo-convoy.sh.in  genopr.sh  gentpco.F90  genx.sh.in  genx2.sh.in  gteml.in  gtfna.in  gtfnb.in  jmz.h  jmz_base.F90  jmz_buf.F90  jmz_config.h.in  jmz_coor.F90  jmz_file.F90  jmz_geogr.F90  jmz_param.F90  jmz_psprop.F90  jmzcmp.F90  jmzconv.F90  jmzdepf90.sh.in  jmzex.F90  jmzlib.F90  (+4 more)
m4c/: Makefile.am  Makefile.in  at_am_include.m4  at_fortran_check.m4  at_init.m4  at_package.m4  at_prog_fc_mpi.m4  at_shell.m4  mt_am_include.m4  mt_define.m4  mt_fortran_check.m4  mt_init.m4  mt_package.m4  mt_prog_fc_mpi.m4  mt_shell.m4
nio/: Makedep.inc  Makefile.am  Makefile.in  README-nio.org  mt_local.m4  nio.F90  nio_axis.F90  nio_bindc.F90  nio_cache.F90  nio_control.F90  nio_division.F90  nio_header.F90  nio_intfc.F90  nio_miroc.F90  nio_nctcdf.F90  nio_record.F90  nio_sparse.F90  nio_std.F90  test_nio_bindc.c  test_nio_intfc.c  touza_nio.h  touza_nio_interface.h  touza_nio_param.h  wtest.sh.in
nng/: Makefile.am  README-nng.org  mt_local.m4  nng.F90  nng_header.F90  nng_io.F90  nng_miroc.F90  nng_record.F90  nng_std.F90  touza_nng.h
ppp/: Makedep.inc  Makefile.am  Makefile.in  README-ppp.org  mt_local.m4  ppp.F90  ppp_amng.F90  ppp_comm.F90  ppp_king.F90  ppp_miroc.F90  ppp_std.F90  touza_ppp.h  wtc.sh  wtc.sh.in
std/: .gitignore  Makedep.inc  Makefile.am  Makefile.in  README-std.org  atpackage.m4  genvar.sh  mt_local.m4  std.F90  std_arg.F90  std_bld.F90  std_env.F90  std_fun.F90  std_htb.F90  std_ipc.F90  std_log.F90  std_mwe.F90  std_prc.F90  std_sus.F90  std_utl.F90  std_wsh.F90  touza_std.h  wta.sh  wte.sh.in
trp/: Makedep.inc  Makefile.am  Makefile.in  README-trp.org  mt_local.m4  touza_trp.h  trapiche.F90  trapiche_ctl.F90  trapiche_float.F90  trapiche_pack.F90  trapiche_std.F90  trapiche_transfer.F90
zbt/: MANIFEST.in  Makefile.am  Makefile.in  README-zbt.org  mt_local.m4  param.sh  pyproject.in  pyproject.toml  setup.py
zbt/tests/: Makefile.am  Makefile.in  gen_demo.sh  test_anim.py  test_calendar.py  test_curve.py  test_dsnio.py  test_iter.py  test_libtouza.py  test_linkedarray.py  test_plot.py  test_xrnio.py
zbt/zbt/: Makefile.am  Makefile.in  __init__.py  config.py  control.py  dsnio.py  helper.py  libtouza.py  param.py  plot.py  util.py  xrnio.py  zbcont.in  zbcont.py  zbtrc.toml
